# ChatVox

./: README.md  config.py  main.py  requirements.txt  setup.cfg
chat_vox/: __init__.py  config.py  gui.py  main.py
