[metadata]
name = chat-vox
version = 0.4.1
url = https://github.com/glyzinieh/ChatVox
author = glyzinieh
author_email = wisteriatp@gmail.com
description = A chatbot that can reply to YouTube Chat message with voice.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    google-generativeai
    requests
    soundcard
    soundfile
    questionary
